copilot fixed tsconfig?

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "allowJs": true,
     "moduleResolution": "node", // Use "node" for broader compatibility
     "checkJs": true, // Enable type checking for JavaScript files
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "outDir": "./build" // Specify output directory for compiled files outside the source paths
   },
   "include": ["server/**/*.ts", "server/**/*.js"], // Include all TypeScript and JavaScript files in the server folder
   "exclude": ["node_modules"] // Exclude unnecessary files
